End of work session - 2026-08-11 20:20
